--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+
 /.pnp
 .pnp.*
 .yarn/*
@@ -39,3 +40,15 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+node_modules
+.next
+out
+.env
+.env.local
+.env*.local
+.DS_Store
+npm-debug.log*
+yarn-debug.log*
+pnpm-debug.log*
